--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -7,8 +7,7 @@
         <div style="margin-bottom: 20px;">
             <h3>Load Map</h3>
             <label for="mapFile" style="display: block; margin-bottom: 5px;">Select XML File:</label>
-            <input type="file" id="mapFile" name="mapFile" (change)="sendXMLtoBack()"
-                style="display: block; width: 100%;" />
+            <input type="file" id="mapFile" name="mapFile" (change)="sendXMLtoBack()" style="display: block; width: 100%;" />
         </div>
 
         <!-- Manage Couriers Section -->
