--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,16 +1,21 @@
 h1 {
-    font-size: xx-large;
+  font-size: xx-large;
 }
 
 h2 {
-    font-size: x-large;
+  font-size: x-large;
 }
 
 h3 {
-    font-size: large;
+  font-size: large;
 }
 
 label {
-    display: block;
-    margin-bottom: 10px;
+  display: block;
+  margin-bottom: 10px;
+}
+
+.dropDown {
+  margin-bottom: 10px 0;
+  /* TODO continue here for the css of the drop down menus */
 }
