--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -15,7 +15,7 @@
         <!-- Manage Couriers Section -->
         <div style="margin-bottom: 20px;">
             <label for="courierCount" style="display: block; margin-bottom: 5px;">Number of Couriers:</label>
-            <input type="number" id="courierCount" name="courierCount" min="1" max="10" style="display: block; width: 100%;" />
+            <input type="number" id="courierCount" name="courierCount" min="1" value="1" style="display: block; width: 100%;" />
             <button (click)="confirmCourierCount()" style="display: block; width: 100%; margin-top: 10px;">Confirm</button>
         </div>
 
