--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -9,7 +9,7 @@
             <input type="file" id="mapFile" name="mapFile" (change)="sendXMLtoBack('map')" style="display: block; width: 100%;" />
             
             <h3>Load Delivery Requests</h3>
-            <input type="file" id="deliveryFile" name="deliveryFile" (change)="sendXMLtoBack('delivery')" style="display: block; width: 100%;" />
+            <input type="file" id="deliveryRequestFile" name="deliveryRequestFile" (change)="sendXMLtoBack('deliveryRequest')" style="display: block; width: 100%;" />
         </div>
 
         <!-- Manage Couriers Section -->
@@ -50,16 +50,16 @@
         </div>
 
         
-
         <!-- Delivery Requests Section -->
+        <!--
         <div style="margin-bottom: 20px;">
             <h3>Delivery Requests</h3>
             <label for="courierSelect" style="display: block; margin-bottom: 5px;">Select Courier:</label>
-            <!--
+
             <select id="courierSelect" name="courierSelect" style="display: block; width: 100%; margin-bottom: 10px;">
                 <option *ngFor="let courier of couriers" [value]="courier.id">{{ courier.name }}</option>
             </select>
-            -->
+            
             <label for="pickupLocation" style="display: block; margin-bottom: 5px;">Pickup Location:</label>
             <input id="pickupLocation" name="pickupLocation" placeholder="Enter address"
                 style="display: block; width: 100%; margin-bottom: 10px;" />
@@ -68,6 +68,8 @@
                 style="display: block; width: 100%; margin-bottom: 10px;" />
             <button style="display: block; width: 100%;">Add Delivery Request</button>
         </div>
+        -->
+
 
         <!-- Save/Restore Tours Section -->
         <div>
