--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
-<!-- <h1>{{title}}</h1> -->
-<img src="optimodLyon.png" alt="logo">
-<nav>
-  <a routerLink="/map">Map</a>
-  |
-  <a>About</a>
-</nav>
-
-<router-outlet></router-outlet>
+<app-header />
+<app-map />
