--- a/src/styles.css
+++ b/src/styles.css
@@ -12,7 +12,7 @@
     --color-secondary-light: #d15b61;
     --color-secondary-dark: #a31621;
     --color-neutral: #fdf0d5;
-    --color-neutral-light: #fff0d1;
+    --color-neutral-light: #fcf6e9;
     --color-neutral-dark: #e8d09f;
     --color-error: #ff0000;
   }
