--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="navbar bg-base-100">
+<div class="navbar bg-base-100 bg-neutral-light">
     <div class="flex-none">
         <button class="btn btn-square btn-ghost">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
@@ -9,6 +9,6 @@
         </button>
     </div>
     <div class="flex-1">
-        <a routerLink="/map" class="btn btn-ghost text-xl">Optimod Lyon</a>
+        <a class="btn btn-ghost text-xl">Optimod Lyon</a>
     </div>
 </div>
