--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -79,16 +79,20 @@
             <div *ngIf="toggleDelivery" class="drop-down-menu">
                 <div>
                     <label for="pickupLocation">Pickup Location</label>
-                    <input type="text" id="pickupLocation" name="pickupLocation" placeholder="Enter address"
-                        class="input input-bordered w-full text-black" />
+                    <input type="text" id="pickupLocation" name="pickupLocation" placeholder="Pick address"
+                        class="input input-bordered w-full text-black" readonly/>
                 </div>
                 <div class="pt-6">
                     <label for="deliveryLocation">Delivery Location</label>
-                    <input type="text" id="deliveryLocation" name="deliveryLocation" placeholder="Enter address"
-                        class="input input-bordered w-full text-black" />
-                    <button class="btn mt-3 block w-full">Add delivery request</button>
-                    <button class="btn mt-3 block w-full" (click)="sendXMLtoBack('deliveryRequest')">
-                        Submit delivery request</button>
+                    <input type="text" id="deliveryLocation" name="deliveryLocation" placeholder="Pick address"
+                        class="input input-bordered w-full text-black" readonly/>
+
+                    <label for="deliveryNumber">Number of delivery added</label>
+                    <input type="text" id="deliveryNumber" name="deliveryLocation" [value]="deliveriesToAdd.length"
+                        class="input input-bordered w-full text-black" readonly/>
+                    <button (click)="clearSelection()" class="btn mt-3 block w-full">Clear selection</button>
+                    <button (click)="clearDeliveries()" class="btn mt-3 block w-full">Clear added deliveries</button>
+                    <button (click)="addDelivery()" class="btn mt-3 block w-full">Add delivery request</button>
                 </div>
             </div>
         </div>
