--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -106,26 +106,31 @@
                 <span *ngIf="toggleTours" class="arrow">⬇</span>
             </button>
 
-            <table class="table w-full">
-                <!-- head -->
-                <thead>
-                    <tr class="flex text-neutral">
-                        <th>ID</th>
-                        <th>Name</th>
-                    </tr>
-                </thead>
-                <tbody class="text-neutral-light">
-                    <tr class="flex cursor-pointer" *ngFor="let tour of currentTours" (click)="selectTour(tour)">
-                        <td>{{ tour.deliveryRequest.courier.id }}</td>
-                        <td>{{ tour.deliveryRequest.courier.name }}</td>
-                        <td [style.color]="colors[currentTours.indexOf(tour) % colors.length]">{{ colors[currentTours.indexOf(tour) % colors.length] }}</td>
-                    </tr>
-                </tbody>
-            </table>
-
 
 
             <div *ngIf="toggleTours" class="drop-down-menu">
+                <table class="table w-full">
+                    <!-- head -->
+                    <thead>
+                        <tr class="flex text-neutral">
+                            <th>ID</th>
+                            <th>Name</th>
+                        </tr>
+                    </thead>
+                    <tbody class="text-neutral-light">
+                        <tr class="flex cursor-pointer" *ngFor="let tour of currentTours">
+                            <td>{{ tour.deliveryRequest.courier.id }}</td>
+                            <td>{{ tour.deliveryRequest.courier.name }}</td>
+                            <td>
+                                <div [style.background-color]="colors[currentTours.indexOf(tour) % colors.length]" style="width: 20px; height: 20px;"></div>
+                            </td>
+                            <td>
+                                <input type="radio" name="selectedTour" (click)="selectTour(tour)" />
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+
                 <button (click)="saveTour()" class="btn mt-3 w-full">Save tours</button>
                 <!--
                 <button (click)="restoreTours()" class="btn mt-3 w-full">Restore tours</button>
